# Generated by Django 5.2.10 on 2026-01-18 06:03
"""Initial schema for submissions and answers."""

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):
    """Create initial submission-related tables."""

    initial = True

    dependencies = [
        ("assessments", "0001_initial"),
        ("assignments", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Answer",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "answer_type",
                    models.CharField(
                        choices=[
                            ("MULTIPLE_CHOICE", "Multiple Choice"),
                            ("SHORT_ANSWER", "Short Answer"),
                            ("NUMBER_SCALE", "Number Scale"),
                            ("MOOD_METER", "Mood Meter"),
                        ],
                        max_length=31,
                    ),
                ),
                ("score", models.FloatField(blank=True, null=True)),
                ("skipped", models.BooleanField(default=False)),
                (
                    "question",
                    models.ForeignKey(
                        db_column="question_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="answers",
                        to="assessments.question",
                    ),
                ),
            ],
            options={
                "db_table": "answer",
            },
        ),
        migrations.CreateModel(
            name="MoodMeterAnswer",
            fields=[
                (
                    "answer",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="mood_meter",
                        serialize=False,
                        to="submissions.answer",
                    ),
                ),
                ("row", models.IntegerField()),
                ("col", models.IntegerField()),
            ],
            options={
                "db_table": "mood_meter_answer",
            },
        ),
        migrations.CreateModel(
            name="MultipleChoiceAnswer",
            fields=[
                (
                    "answer",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="multiple_choice",
                        serialize=False,
                        to="submissions.answer",
                    ),
                ),
            ],
            options={
                "db_table": "multiple_choice_answer",
            },
        ),
        migrations.CreateModel(
            name="NumberScaleAnswer",
            fields=[
                (
                    "answer",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="number_scale",
                        serialize=False,
                        to="submissions.answer",
                    ),
                ),
                ("val", models.IntegerField(blank=True, null=True)),
            ],
            options={
                "db_table": "number_scale_answer",
            },
        ),
        migrations.CreateModel(
            name="ShortAnswerAnswer",
            fields=[
                (
                    "answer",
                    models.OneToOneField(
                        db_column="id",
                        on_delete=django.db.models.deletion.CASCADE,
                        primary_key=True,
                        related_name="short_answer",
                        serialize=False,
                        to="submissions.answer",
                    ),
                ),
                ("text", models.CharField(max_length=255)),
            ],
            options={
                "db_table": "short_answer_answer",
            },
        ),
        migrations.CreateModel(
            name="Response",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("skipped", models.BooleanField(blank=True, null=True)),
                ("submitted_at", models.DateTimeField(blank=True, null=True)),
                (
                    "question",
                    models.ForeignKey(
                        blank=True,
                        db_column="question_id",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="responses",
                        to="assessments.question",
                    ),
                ),
                (
                    "respondent",
                    models.ForeignKey(
                        blank=True,
                        db_column="respondent_id",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="responses",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "response",
            },
        ),
        migrations.CreateModel(
            name="Submission",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("score", models.FloatField(blank=True, null=True)),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("NOT_STARTED", "Not Started"),
                            ("IN_PROGRESS", "In Progress"),
                            ("SUBMITTED", "Submitted"),
                            ("GRADED", "Graded"),
                        ],
                        max_length=255,
                    ),
                ),
                ("submitted_at", models.DateTimeField(blank=True, null=True)),
                (
                    "assignment",
                    models.ForeignKey(
                        db_column="assignment_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="submissions",
                        to="assignments.assignment",
                    ),
                ),
                (
                    "student",
                    models.ForeignKey(
                        blank=True,
                        db_column="student_id",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="student_submissions",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "teacher",
                    models.ForeignKey(
                        blank=True,
                        db_column="teacher_id",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="teacher_submissions",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "db_table": "submissions",
            },
        ),
        migrations.AddField(
            model_name="answer",
            name="submission",
            field=models.ForeignKey(
                db_column="submission_id",
                on_delete=django.db.models.deletion.CASCADE,
                related_name="answers",
                to="submissions.submission",
            ),
        ),
        migrations.CreateModel(
            name="MultipleChoiceSelected",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                ("choice_index", models.IntegerField(blank=True, null=True)),
                (
                    "answer",
                    models.ForeignKey(
                        db_column="answer_id",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="selected",
                        to="submissions.multiplechoiceanswer",
                    ),
                ),
            ],
            options={
                "db_table": "multiple_choice_selected",
            },
        ),
    ]
