@startuml
hide circle
skinparam classAttributeIconSize 0

package "submissions" {
class Answer <<Model>> {
  +id: BigAutoField
  +answer_type: CharField
  +question: Question
  +submission: Submission
  +score: FloatField
  +skipped: BooleanField
}
class MoodMeterAnswer <<Model>> {
  +answer: Answer
  +row: IntegerField
  +col: IntegerField
}
class MultipleChoiceAnswer <<Model>> {
  +answer: Answer
}
class MultipleChoiceSelected <<Model>> {
  +id: BigAutoField
  +answer: MultipleChoiceAnswer
  +choice_index: IntegerField
}
class NumberScaleAnswer <<Model>> {
  +answer: Answer
  +val: IntegerField
}
class Response <<Model>> {
  +id: BigAutoField
  +question: Question
  +respondent: User
  +skipped: BooleanField
  +submitted_at: DateTimeField
}
class ShortAnswerAnswer <<Model>> {
  +answer: Answer
  +text: CharField
}
class Submission <<Model>> {
  +id: BigAutoField
  +assignment: Assignment
  +score: FloatField
  +status: CharField
  +student: User
  +teacher: User
  +submitted_at: DateTimeField
}
}

Submission "0..*" -- "1" Assignment : assignment
Submission "0..*" -- "1" User : student
Submission "0..*" -- "1" User : teacher
Answer "0..*" -- "1" Question : question
Answer "0..*" -- "1" Submission : submission
MultipleChoiceAnswer "0..*" -- "1" Answer : answer
MultipleChoiceSelected "0..*" -- "1" MultipleChoiceAnswer : answer
ShortAnswerAnswer "0..*" -- "1" Answer : answer
NumberScaleAnswer "0..*" -- "1" Answer : answer
MoodMeterAnswer "0..*" -- "1" Answer : answer
Response "0..*" -- "1" Question : question
Response "0..*" -- "1" User : respondent
@enduml
